--- a/report/ch/audited-small.yaml
+++ b/report/ch/audited-small.yaml
@@ -25,7 +25,7 @@ accounts-status: audited
 accounts-type: abridged-accounts
 
 # Report title
-title: Audited Small-company Accounts
+title: Audited Small Company Accounts
 
 #############################################################################
 ### Report computations #####################################################
@@ -711,6 +711,7 @@ elements:
         - tag: tr
           content:
           - tag: td
+            attributes: { class: tag }
             content: Directors
           - tag: td
             content:
@@ -722,6 +723,7 @@ elements:
         - tag: tr
           content:
           - tag: td
+            attributes: { class: tag }
             content: Company number
           - tag: td
             content: 'expand:
@@ -729,6 +731,7 @@ elements:
         - tag: tr
           content:
           - tag: td
+            attributes: { class: tag }
             content: Registered office
           - tag: td
             content:
@@ -742,6 +745,7 @@ elements:
         - tag: tr
           content:
           - tag: td
+            attributes: { class: tag }
             content: Accountant
           - tag: td
             content:
