Added employee numbers

--- a/report/ch/audited-micro.yaml
+++ b/report/ch/audited-micro.yaml
@@ -312,7 +312,7 @@ computations:
 # Corporation tax liability
 - id: corporation-tax-owed
   kind: line
-  description: Corporation Tax
+  description: Corporation tax
   period: at-end
   accounts:
   - Liabilities:Owed Corporation Tax
@@ -368,7 +368,7 @@ computations:
 # Corporation tax drawn on the equity account
 - id: corporation-tax
   kind: line
-  description: Corporation Tax
+  description: Corporation tax
   period: at-end
   accounts:
   - Equity:Corporation Tax
@@ -476,7 +476,7 @@ computations:
 # Shares issued
 - id: shares-issued
   kind: line
-  description: Shares Issued
+  description: Shares issued
   period: in-year
   accounts:
   - Equity:Shareholdings
@@ -762,13 +762,54 @@ elements:
           attributes: { class: subtitle }
           content: 'expand:For the year ended ~[period-end]'
         - tag: hr
-  - kind: notes
-    notes:
 
-    # Some boilerplate notes...
+      - tag: div
+        content:
 
-    # Company number and address.
-    - template:company
+        - element:
+            kind: noteheading
+            title: Company information
+            level: 1
+
+        - tag: p
+          content:
+          - template:company
+
+        - element:
+            kind: noteheading
+            title: Employees
+            level: 1
+
+        - tag: p
+          content: "The average monthly number of persons employed by the
+            company (including directors) during the period was as follows:"
+
+        - tag: table
+          attributes:
+            class: sheet table
+          content:
+          - tag: tr
+            content:
+            - tag: td
+              attributes: { class: label }
+              content: ""
+            - tag: td
+              attributes: { class: period periodname }
+              content: "expand:~[metadata.accounting.periods.0.name]"
+            - tag: td
+              attributes: { class: period periodname }
+              content: "expand:~[metadata.accounting.periods.1.name]"
+          - tag: tr
+            content:
+            - tag: td
+              attributes: { class: label header }
+              content: "Employees"
+            - tag: td
+              attributes: { class: period value }
+              content: expand:~[average-employees-this]
+            - tag: td
+              attributes: { class: period value }
+              content: expand:~[average-employees-previous]
 
 - id: revision-info
   kind: page
