--- a/test/unaud-micro.yaml
+++ b/test/unaud-micro.yaml
@@ -24,7 +24,7 @@ report: //import report/ch/unaudited-micro.yaml
 # pretty-print: true
 # Decimal places
 
-metadata: //import metadata.yaml
+metadata: //import test/metadata.yaml
 
 directors-report: //import directors-report.yaml
 
@@ -35,3 +35,4 @@ accountants-report: //import accountants-report.yaml
 
 notes: //import notes.yaml
 
+macros: //import report/ch/macros.yaml
