--- a/report/ch/audited-small.yaml
+++ b/report/ch/audited-small.yaml
@@ -636,240 +636,16 @@ elements:
   title: Share Capital
   worksheet: share-capital
 
-- id: title
-  kind: page
-  elements:
-  - kind: html
-    root:
-      tag: div
-      attributes: { class: titlepage }
-      content:
-      - tag: div
-        attributes: { class: company-number }
-        content: 'expand:
-          Company registration no. ~[company-number] (~[jurisdiction])'
-      - tag: img
-        attributes:
-          src: //import logo.yaml
-          alt: Company logo
-      - tag: div
-        attributes: { class: company-name }
-        content: 'expand:~[company-name]'
-      - tag: div
-        attributes: { class: title }
-        content: expand:~[report-title]
-      - tag: div
-        attributes: { class: subtitle }
-        content: 'expand:For the year ended ~[period-end]'
-
-- id: consent
-  kind: page
-  elements:
-  - kind: html
-    root:
-      tag: div
-      content:
-      - tag: div
-        attributes: { class: heading }
-        content:
-        - tag: div
-          content: 'expand:~[company-name]'
-        - tag: div
-          content: Statement of Consent
-        - tag: div
-          content: 'expand:For the year ended ~[period-end]'
-        - tag: hr
-      - tag: div
-        content:
-        - tag: h3
-          content: "Statement of consent to prepare Abridged Financial
-            Statements"
-        - tag: p
-          content: "template:members-agreed-abridged-accounts"
-
-- id: company-info
-  kind: page
-  elements:
-  - kind: html
-    root:
-      tag: div
-      content:
-      - tag: div
-        attributes: { class: heading }
-        content:
-        - tag: div
-          content: 'expand:~[company-name]'
-        - tag: div
-          content: Company information
-        - tag: div
-          content: 'expand:For the year ended ~[period-end]'
-        - tag: hr
-      - tag: table
-        attributes:
-          class: company-info
-        content:
-        - tag: tr
-          content:
-          - tag: td
-            attributes: { class: tag }
-            content: Directors
-          - tag: td
-            content:
-            - 'expand:~[officer1]'
-            - tag: br
-            - 'expand:~[officer2]'
-            - tag: br
-            - 'expand:~[officer3]'
-        - tag: tr
-          content:
-          - tag: td
-            attributes: { class: tag }
-            content: Company number
-          - tag: td
-            content: 'expand:
-            ~[company-number], registered in ~[jurisdiction]'
-        - tag: tr
-          content:
-          - tag: td
-            attributes: { class: tag }
-            content: Registered office
-          - tag: td
-            content:
-            - 'expand:~[contact-address1::, ]'
-            - tag: br
-              content: []
-            - 'expand:~[contact-address2::, ]'
-            - tag: br
-              content: []
-            - 'expand:~[contact-location::, ] ~[contact-postcode]'
-        - tag: tr
-          content:
-          - tag: td
-            attributes: { class: tag }
-            content: Accountant
-          - tag: td
-            content:
-            - expand:~[accountant-name]
-            - tag: br
-            - expand:~[accountant-business]
-            - tag: br
-            - expand:~[accountant-address]
-        - tag: tr
-          content:
-          - tag: td
-            content: Auditor
-          - tag: td
-            content:
-            - expand:~[auditor-name]
-            - tag: br
-            - expand:~[auditor-business]
-            - tag: br
-            - expand:~[auditor-address]
-
 - //ref directors-report
 - //ref auditors-report
 - //ref accountants-report
 
-- id: signature
-  kind: html
-  root:
-    tag: div
-    content:
-    - tag: p
-      content: 'expand:Approved by the board of directors and
-        authorised for publication on ~[authorised-date].'
-    - tag: p
-      content: 'expand:Signed on behalf of the board, by
-        ~[signers-name].'
-    - tag: img
-      attributes:
-        src: //import signature.yaml
-        alt: Director's signature
+- //ref macros.simple-notes
+- //ref macros.revision
+- //ref macros.company-info
+- //ref macros.title
+- //ref macros.signature
+- //ref macros.simple-notes
+- //ref macros.revision
+- //ref macros.consent
 
-- id: notes
-  kind: page
-  elements:
-  - kind: html
-    root:
-      tag: div
-      content:
-      - tag: div
-        attributes: { class: heading }
-        content:
-        - tag: div
-          content: 'expand:~[company-name]'
-        - tag: div
-          content: Notes to the accounts
-        - tag: div
-          attributes: { class: subtitle }
-          content: 'expand:For the year ended ~[period-end]'
-        - tag: hr
-
-      - tag: div
-        content:
-
-        - element:
-            kind: noteheading
-            title: Company information
-            level: 1
-
-        - tag: p
-          content:
-          - template:company
-
-        - element:
-            kind: noteheading
-            title: Employees
-            level: 1
-
-        - tag: p
-          content: "The average monthly number of persons employed by the
-            company (including directors) during the period was as follows:"
-
-        - tag: table
-          attributes:
-            class: sheet table
-          content:
-          - tag: tr
-            content:
-            - tag: td
-              attributes: { class: label }
-              content: ""
-            - tag: td
-              attributes: { class: period periodname }
-              content: "expand:~[metadata.accounting.periods.0.name]"
-            - tag: td
-              attributes: { class: period periodname }
-              content: "expand:~[metadata.accounting.periods.1.name]"
-          - tag: tr
-            content:
-            - tag: td
-              attributes: { class: label header }
-              content: "Employees"
-            - tag: td
-              attributes: { class: period value }
-              content: expand:~[average-employees-this]
-            - tag: td
-              attributes: { class: period value }
-              content: expand:~[average-employees-previous]
-
-- id: revision-info
-  kind: page
-  elements:
-  - kind: html
-    root:
-      tag: div
-      content:
-      - tag: div
-        attributes: { class: heading }
-        content:
-        - tag: div
-          content: 'expand:~[company-name]'
-        - tag: div
-          content: Revision of the financial statements
-        - tag: div
-          attributes: { class: subtitle }
-          content: 'expand:For the year ended ~[period-end]'
-        - tag: hr
-  - kind: html
-    root: //import supplementary-note.yaml
