--- a/report/ch/unaudited-full.yaml
+++ b/report/ch/unaudited-full.yaml
@@ -951,151 +951,16 @@ elements:
   title: Share Capital
   worksheet: share-capital
 
-- id: title
-  kind: page
-  elements:
-  - kind: html
-    root:
-      tag: div
-      attributes: { class: titlepage }
-      content:
-      - tag: div
-        attributes: { class: company-number }
-        content: 'expand:
-          Company registration no. ~[company-number] (~[jurisdiction])'
-      - tag: img
-        attributes:
-          src: //import logo.yaml
-          alt: Company logo
-      - tag: div
-        attributes: { class: company-name }
-        content: 'expand:~[company-name]'
-      - tag: div
-        attributes: { class: title }
-        content: expand:~[report-title]
-      - tag: div
-        attributes: { class: subtitle }
-        content: 'expand:For the year ended ~[period-end]'
-
-- id: company-info
-  kind: page
-  elements:
-  - kind: html
-    root:
-      tag: div
-      content:
-      - tag: div
-        attributes: { class: heading }
-        content:
-        - tag: div
-          content: 'expand:~[company-name]'
-        - tag: div
-          content: Company information
-        - tag: div
-          content: 'expand:For the year ended ~[period-end]'
-        - tag: hr
-      - tag: table
-        attributes:
-          class: company-info
-        content:
-        - tag: tr
-          content:
-          - tag: td
-            attributes: { class: tag }
-            content: Directors
-          - tag: td
-            content:
-            - 'expand:~[officer1]'
-            - tag: br
-            - 'expand:~[officer2]'
-            - tag: br
-            - 'expand:~[officer3]'
-        - tag: tr
-          content:
-          - tag: td
-            attributes: { class: tag }
-            content: Company number
-          - tag: td
-            content: 'expand:
-            ~[company-number], registered in ~[jurisdiction]'
-        - tag: tr
-          content:
-          - tag: td
-            attributes: { class: tag }
-            content: Registered office
-          - tag: td
-            content:
-            - 'expand:~[contact-address1::, ]'
-            - tag: br
-              content: []
-            - 'expand:~[contact-address2::, ]'
-            - tag: br
-              content: []
-            - 'expand:~[contact-location::, ] ~[contact-postcode]'
-        - tag: tr
-          content:
-          - tag: td
-            attributes: { class: tag }
-            content: Accountant
-          - tag: td
-            content:
-            - expand:~[accountant-name]
-            - tag: br
-            - expand:~[accountant-business]
-            - tag: br
-            - expand:~[accountant-address]
-        - tag: tr
-          content:
-          - tag: td
-            attributes: { class: tag }
-            content: Auditor
-          - tag: td
-            content:
-            - expand:~[auditor-name]
-            - tag: br
-            - expand:~[auditor-business]
-            - tag: br
-            - expand:~[auditor-address]
-
 - //ref directors-report
 - //ref auditors-report
 - //ref accountants-report
-
-- id: signature
-  kind: html
-  root:
-    tag: div
-    content:
-    - tag: p
-      content: 'expand:Approved by the board of directors and
-        authorised for publication on ~[authorised-date].'
-    - tag: p
-      content: 'expand:Signed on behalf of the board, by
-        ~[signers-name].'
-    - tag: img
-      attributes:
-        src: //import signature.yaml
-        alt: Director's signature
-
 - //ref notes
 
-- id: revision-info
-  kind: page
-  elements:
-  - kind: html
-    root:
-      tag: div
-      content:
-      - tag: div
-        attributes: { class: heading }
-        content:
-        - tag: div
-          content: 'expand:~[company-name]'
-        - tag: div
-          content: Revision of the financial statements
-        - tag: div
-          attributes: { class: subtitle }
-          content: 'expand:For the year ended ~[period-end]'
-        - tag: hr
-  - kind: html
-    root: //import supplementary-note.yaml
+- //ref macros.revision
+- //ref macros.company-info
+- //ref macros.title
+- //ref macros.signature
+- //ref macros.simple-notes
+- //ref macros.revision
+- //ref macros.consent
+
