--- a/test/aud-micro-rev.yaml
+++ b/test/aud-micro-rev.yaml
@@ -24,7 +24,7 @@ report: //import report/ch/audited-micro.yaml
 # pretty-print: true
 # Decimal places
 
-metadata: //import metadata-revised.yaml
+metadata: //import test/metadata-aud-rev.yaml
 
 directors-report: //import directors-report.yaml
 
