--- a/test/unaud-abr-rev.yaml
+++ b/test/unaud-abr-rev.yaml
@@ -24,8 +24,7 @@ report: //import report/ch/unaudited-abridged.yaml
 # pretty-print: true
 # Decimal places
 
-#metadata: //import metadata.yaml
-metadata: //import metadata-revised.yaml
+metadata: //import test/metadata-acc-rev.yaml
 
 directors-report: //import directors-report.yaml
 
